# AetherAgent

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  PLAN_PIXELPERFECT.md  README.md  ci.yml  dashboard.html  gitignore  integration_test.rs  mcp_proxy.py  render.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: BENCHMARK_RESULTS.md  HYBRID_BENCHMARK_RESULTS.md  README.md  ablation_44_results.json  ablation_44_sites.py  ablation_raw_goals.py  ablation_raw_results.json  ablation_real.py  ablation_real_results.json  ablation_results.json  ablation_study.py  answer_finding_benchmark.py  answer_finding_results.json  bench_campfire.py  bench_definitive.rs  bench_definitive_lp_chrome.js  bench_embedding_vs_lightpanda.py  bench_fair_three_way.js  bench_final.js  bench_headless_chrome.js  bench_hybrid_pipeline.rs  bench_main.rs  bench_quality.rs  bench_quality_all.js  bench_quality_lp.sh  bench_vs_lightpanda.py  benchmark_results.json  bottomup_30_results.json  bottomup_30_sites.py  bottomup_penalties.py  bottomup_penalties_results.json  campfire_fixture.html  campfire_results.json  colbert_bench.rs  colbert_quality_analysis.rs  colbert_validation.rs  complete_results.json  crfr_final_benchmark.rs  crfr_live_results.json  crfr_live_test.py  (+23 more)
bindings/node/: index.d.ts  index.js  package-lock.json  package.json  test.js
bindings/python/: aether_agent.py
codegen/: Cargo.toml
codegen/src/: attr_classify.rs  main.rs  rust_gen.rs  type_map.rs  webidl_parser.rs
debug/: FULL_TEST_REPORT.md  aether_testrapport.docx  aether_xhr_network_interception.docx
debug/html/: aether_multiagent_report.html  aether_test_report.html  aether_test_report_v2.html
demos/: crfr-10questions-stream.sh  crfr-10questions.tape  render_flagship.py  render_flagship_v2.py  render_learning.py  render_mp4.py  render_wikipedia.py
dev/: CRFR-ANALYSIS.md  CRFR-causal-resonance-field-retrieval.md  CRFR-whitepaper.md  PR_hybrid_integration_map.md  PR_hybrid_scoring_pipeline.md  aether_vision_v2.md  aetheragent_ecommerce_report.md  anti-bot-cookie-consent-research-2026-03-24.md  fas16-stream-parse-test-report.md  fas17-djupanalys-2026-03-21.md  hjo_multiagent_analysis.md  html5ever-tweaks-research-2026-03-24.md  lightpanda_integration_rapport.docx  local-setup-guide.md  mcp.md  optimization-report-2026-03-24.md  persistent-crfr-learning.md  plan-quickjs-fullstack.md  plan2026-03-19.md  plan2026-03-20-2.md  plan2026-03-20.md  plan2026-03-21.md  quickjs-dom-api-status.md  quickjs-perf-optimering-2026-03-24.md  test-rapport-2026-03-24.md
docs/: adaptive-multipage-plan.md  aetheragent-analysis-report.md  api-reference.md  architecture.md  building.md  codegen-v3-plan.md  colbert_vs_minilm_validation.md  convergence-baseline.json  convergence-v18-honest.json  crfr-20site-evaluation-v18.md  crfr-20site-evaluation.json  crfr-20site-evaluation.md  crfr-20site-v2-evaluation.json  crfr-ablation-study.json  crfr-architecture-analysis.md  crfr-convergence-final.json  crfr-convergence-test.json  crfr-honest-convergence.json  crfr-honest-manual-eval.md  crfr-ir-evaluation.json  crfr-learning-data-all.json  crfr-learning-data-en.json  crfr-learning-data.json  crfr-learning-proof.md  crfr-suppression-convergence.json  dom-api-coverage.md  dom-implementation-status.md  features.md  hybrid_scoring_whitepaper.md  msmarco-eval.md  poc-analysis-and-optimization.md  real_world_validation.md  testing.md  tool-consolidation-plan.md  tool-test-results.md  wpt-coverage-analysis.md  wpt-dashboard.md  wpt-testing-strategy.md  wpt-workflow-guide.md
examples/: python_test.py  render_demo.rs
guides/: lightpanda-vs-aetheragent-analysis.md  vision-2.md  vision.MD
js-testsuite/: STATUS.md
landing-pages/: components.js  concept-1-the-reduction.html  concept-2-the-signal.html  dashboard.html  docs.html  index.html  mission.html  screenshot.mjs  server.mjs  timeline.html  try.html
patches/: stylo-has-support.patch
scripts/: bm25_weight_sweep.py  compute_metrics.py  run_20site_eval.py  setup-local.sh  sweep_one_weight.sh  test_local_convergence.py  test_local_convergence.sh
src/: adaptive.rs  arena_dom.rs  arena_dom_sink.rs  causal.rs  collab.rs  compiler.rs  css_cascade.rs  css_compiler.rs  dashboard.rs  diff.rs  dom_bridge.rs  embedding.rs  escalation.rs  event_loop.rs  fetch.rs  firewall.rs  grounding.rs  hydration.rs  intent.rs  intercept.rs  js_bridge.rs  js_eval.rs  lib.rs  link_extract.rs  memory.rs  orchestrator.rs  parser.rs  persist.rs  resonance.rs  search.rs  semantic.rs  session.rs  stream_engine.rs  stream_state.rs  streaming.rs  taffy_render.rs  temporal.rs  trust.rs  types.rs  vision.rs  (+2 more)
src/dom_bridge/: attributes.rs  chardata.rs  computed.rs  element_state.rs  events.rs  html_properties.rs  mod.rs  node_ops.rs  selectors.rs  state.rs  style.rs  utils.rs  window.rs
src/scoring/: cache.rs  colbert_reranker.rs  embed_score.rs  hdc.rs  mod.rs  page_cache.rs  pipeline.rs  tfidf.rs
src/tools/: act_tool.rs  collab_tool.rs  crawl_tool.rs  diff_tool.rs  discover_tool.rs  links_tool.rs  mod.rs  parse_hybrid_tool.rs  parse_tool.rs  plan_tool.rs  search_tool.rs  secure_tool.rs  session_tool.rs  stream_tool.rs  vision_tool.rs  workflow_tool.rs
test-sites/hn/: index.html  item1.html  item2.html  item3.html
tests/: bench_internal.py  bench_internal_results.json  bench_vs_lightpanda_mcp.py  bench_vs_lightpanda_results.json  embedding_benchmark_results.json  embedding_vs_text_benchmark.py  fixture_tests.rs  integration_test.rs  js_testsuite.rs  live_site_tests.rs  mcp_tool_test.sh  test_all_endpoints.sh  test_multistep_pipelines.sh  test_pipelines.py  tools_integration_test.rs
tools/: bench_tier_comparison.py  bench_tier_results.json  bootstrap_wsl.sh  reconvert_datasets.sh  test_live_api.py  test_live_vision.py  train.sh  train_vision.py
webidl/: cssom.webidl  dom_core.webidl  domparsing.webidl  html_input.webidl  html_media.webidl  html_misc.webidl  uievents.webidl
wpt/: polyfills.js  runner.rs  setup.sh  testharness-shim.js  testharnessreport.js
(+119 files in other folders)
