[package]
name = "aether-agent"
version = "0.1.0"
edition = "2021"
description = "LLM-native embeddable browser engine – semantic perception layer for AI agents"
license = "MIT"
repository = "https://github.com/robinandreeklund-collab/AetherAgent"
autobenches = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html5ever = "0.27"
aho-corasick = "1.1"
markup5ever_rcdom = "0.3"
slotmap = "1.0"

# Server dependencies (only for native binary, not WASM)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# JS evaluation engine (Fas 4b – optional, adds ~2MB to binary)
boa_engine = { version = "0.21", optional = true }

# HTTP fetch (Fas 7 – optional, for standalone page fetching)
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "rustls-tls", "rustls-tls-native-roots"], optional = true, default-features = false }

# Fas 8: Ethical Engine – robots.txt (Google's parser) + rate limiting
robotstxt = { version = "0.3", optional = true }
governor = { version = "0.10", optional = true }

# Fas 8: MCP Server – Model Context Protocol
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }

# Fas 11: Vision – YOLOv8 inference via ONNX Runtime (optional, feature-gated)
# [RTEN-ROLLBACK-ID:vision-deps] Gamla rten-deps:
# rten = { version = "0.15", optional = true }
# rten-imageproc = { version = "0.15", optional = true }
# rten-tensor = { version = "0.15", optional = true }
ort = { version = "2.0.0-rc.9", optional = true }
ndarray = { version = "0.16", optional = true }
image = { version = "0.25", optional = true }

# CDP – Chrome DevTools Protocol for Tier 2 rendering (optional)
headless_chrome = { version = "1.0", optional = true }

# Blitz – ren Rust HTML/CSS-renderer för server-side screenshots (optional)
blitz-html = { version = "0.2", optional = true }
blitz-dom = { version = "0.2", optional = true }
blitz-paint = { version = "0.2", optional = true }
blitz-net = { version = "0.2", optional = true }
blitz-traits = { version = "0.2", optional = true }
anyrender = { version = "0.6", optional = true }
anyrender_vello_cpu = { version = "0.7", optional = true }
# Peniko version must match anyrender 0.6's dep (peniko 0.5)
peniko = { version = "0.5", optional = true }
png = { version = "0.17", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
server = ["axum", "tokio", "tokio-stream", "tower-http", "js-eval", "fetch", "base64", "blitz", "vision"]
js-eval = ["boa_engine"]
fetch = ["reqwest", "tokio", "robotstxt", "governor"]
mcp = ["rmcp", "tokio", "schemars", "base64", "blitz", "reqwest", "vision", "fetch"]
# [RTEN-ROLLBACK-ID:vision-feature] Gamla: vision = ["rten", "rten-imageproc", "rten-tensor", "image"]
vision = ["ort", "ndarray", "image"]
blitz = ["blitz-html", "blitz-dom", "blitz-paint", "blitz-net", "blitz-traits", "anyrender", "anyrender_vello_cpu", "peniko", "png"]
cdp = ["headless_chrome"]

[[bin]]
name = "aether-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "aether-mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[[bin]]
name = "aether-bench"
path = "benches/bench_main.rs"

[profile.release]
opt-level = "z"    # minimera binärstorlek
lto = true
codegen-units = 1
panic = "abort"    # mindre WASM-output

# Server deploy profile: faster builds, still optimized
# Usage: cargo build --profile server-release --features server,vision
[profile.server-release]
inherits = "release"
opt-level = 2      # snabb kod, inte minsta binär
lto = "thin"       # ~3x snabbare än full LTO, 95% av vinsten
codegen-units = 4  # snabbare kompilering, minimal perf-kostnad

[profile.dev]
opt-level = 0
debug = true
# Fler codegen-units → lägre peak-minnesanvändning vid länkning
# (default 256 i dev, men explicit för tydlighet)
codegen-units = 256
