[workspace]
exclude = ["codegen"]

[package]
name = "aether-agent"
version = "0.1.0"
edition = "2021"
description = "LLM-native embeddable browser engine – semantic perception layer for AI agents"
license = "MIT"
repository = "https://github.com/robinandreeklund-collab/AetherAgent"
autobenches = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html5ever = "0.38"
tendril = "0.5"
aho-corasick = "1.1"
markup5ever_rcdom = "0.38"
slotmap = { version = "1.0", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
selectors = "0.36"
cssparser = "0.36"
precomputed-hash = "0.1"

# Server dependencies (only for native binary, not WASM)
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# JS evaluation engine (QuickJS via rquickjs – optional, snabbare och mindre än Boa)
rquickjs = { version = "0.11", features = ["bindgen"], optional = true }

# HTTP fetch (Fas 7 – optional, for standalone page fetching)
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "rustls-tls", "rustls-tls-native-roots"], optional = true, default-features = false }

# Persistence (SQLite — optional, for CRFR field/domain caching)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Fas 8: Ethical Engine – robots.txt (Google's parser) + rate limiting
robotstxt = { version = "0.3", optional = true }
governor = { version = "0.10", optional = true }

# Fas 8: MCP Server – Model Context Protocol
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }

# Fas 11: Vision – YOLOv8 inference via ONNX Runtime (optional, feature-gated)
# [RTEN-ROLLBACK-ID:vision-deps] Gamla rten-deps:
# rten = { version = "0.15", optional = true }
# rten-imageproc = { version = "0.15", optional = true }
# rten-tensor = { version = "0.15", optional = true }
ort = { version = "2.0.0-rc.9", optional = true }
ndarray = { version = "0.16", optional = true }
image = { version = "0.25", optional = true }

# CDP – Chrome DevTools Protocol for Tier 2 rendering (optional)
headless_chrome = { version = "1.0", optional = true }

# Fas 19: CSS Compiler – lightningcss for CSS transforms + css-inline for style flattening
lightningcss = { version = "1.0.0-alpha.71", optional = true, default-features = false }
css-inline = { version = "0.20", optional = true, default-features = false }

# Blitz rendering — git deps from DioxusLabs/blitz main (stylo 0.14, selectors 0.36)
blitz-html = { git = "https://github.com/DioxusLabs/blitz.git", rev = "4c9fb2820dc74860d3b2d972493fa4e9fa83eb48", optional = true }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz.git", rev = "4c9fb2820dc74860d3b2d972493fa4e9fa83eb48", optional = true, default-features = false, features = ["svg"] }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz.git", rev = "4c9fb2820dc74860d3b2d972493fa4e9fa83eb48", optional = true }
blitz-net = { git = "https://github.com/DioxusLabs/blitz.git", rev = "4c9fb2820dc74860d3b2d972493fa4e9fa83eb48", optional = true }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz.git", rev = "4c9fb2820dc74860d3b2d972493fa4e9fa83eb48", optional = true }
style_traits = { version = "0.14", package = "stylo_traits", optional = true }
anyrender = { version = "0.8", optional = true }
anyrender_vello_cpu = { version = "0.8", package = "anyrender_vello", optional = true }
peniko = { version = "0.6", optional = true }
png = { version = "0.17", optional = true }

# Taffy+Vello fallback rendering (matchar blitz main deps)
taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "4b6687da0ca1e9d71da4e48b4c659f5c45060707", default-features = false, features = ["std", "taffy_tree", "flexbox", "grid", "block_layout", "content_size", "calc", "detailed_layout_info"], optional = true }
parley = { git = "https://github.com/linebender/parley", rev = "d7df17aa32637e95b64c1f804fb7ef7ea1981bd3", default-features = false, features = ["std"], optional = true }
fontique = { version = "0.6", optional = true }
skrifa = { version = "0.40", optional = true }
vello_cpu = { version = "0.0.3", features = ["text"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
base64 = "0.22"

[features]
default = []
server = ["axum", "tokio", "tokio-stream", "tower-http", "js-eval", "fetch", "base64", "blitz", "vision", "embeddings", "persist"]
persist = ["rusqlite"]
js-eval = ["rquickjs"]
fetch = ["reqwest", "tokio", "robotstxt", "governor"]
mcp = ["rmcp", "tokio", "schemars", "base64", "blitz", "reqwest", "vision", "fetch", "js-eval", "axum", "tower-http", "embeddings"]
# [RTEN-ROLLBACK-ID:vision-feature] Gamla: vision = ["rten", "rten-imageproc", "rten-tensor", "image"]
vision = ["ort", "ndarray", "image"]
embeddings = ["ort", "ndarray"]
colbert = ["embeddings"]
blitz = ["blitz-html", "blitz-dom", "blitz-paint", "blitz-net", "blitz-traits", "style_traits", "anyrender", "anyrender_vello_cpu", "peniko", "png", "base64", "css-inline", "lightningcss", "taffy", "parley", "fontique", "skrifa", "vello_cpu"]
cdp = ["headless_chrome"]

[[bin]]
name = "aether-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "aether-mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[[bin]]
name = "aether-bench"
path = "benches/bench_main.rs"

[[bin]]
name = "aether-embedding-bench"
path = "benches/embedding_bench.rs"
required-features = ["embeddings"]

[[bin]]
name = "aether-token-check"
path = "benches/token_check.rs"
required-features = ["embeddings"]

[[bin]]
name = "aether-token-md-check"
path = "benches/token_md_check.rs"
required-features = ["embeddings"]

[[bin]]
name = "aether-definitive-bench"
path = "benches/bench_definitive.rs"
required-features = ["embeddings"]

[[bin]]
name = "aether-quality-bench"
path = "benches/bench_quality.rs"
required-features = ["embeddings"]

[[bin]]
name = "aether-pipeline-breakdown"
path = "benches/pipeline_breakdown.rs"
required-features = ["colbert"]

[[bin]]
name = "aether-quality-analysis"
path = "benches/colbert_quality_analysis.rs"
required-features = ["colbert"]

[[bin]]
name = "aether-colbert-validation"
path = "benches/colbert_validation.rs"
required-features = ["embeddings", "colbert"]

[[bin]]
name = "aether-colbert-bench"
path = "benches/colbert_bench.rs"

[[bin]]
name = "aether-hybrid-bench"
path = "benches/bench_hybrid_pipeline.rs"

[[bin]]
name = "aether-real-world"
path = "benches/real_world_validation.rs"

[[bin]]
name = "aether-convergence-test"
path = "src/bin/convergence_test.rs"
required-features = ["fetch"]

[[bin]]
name = "aether-crfr-bench"
path = "src/bin/crfr_benchmark.rs"

[[bin]]
name = "msmarco-eval"
path = "benches/msmarco_eval.rs"

[[bin]]
name = "aether-crfr-vs-colbert"
path = "benches/crfr_vs_colbert.rs"

[[bin]]
name = "aether-final-bench"
path = "benches/crfr_final_benchmark.rs"

[[bin]]
name = "aether-wpt"
path = "wpt/runner.rs"
required-features = ["js-eval", "blitz", "fetch"]

[[example]]
name = "render_demo"
required-features = ["js-eval", "blitz"]

[profile.release]
opt-level = "z"    # minimera binärstorlek
lto = true
codegen-units = 1
panic = "abort"    # mindre WASM-output

# html5ever och markup5ever är parsing-tunga — full hastighetsoptimering
# medan egen kod behåller "z" för WASM-storlek
[profile.release.package.html5ever]
opt-level = 3
[profile.release.package.markup5ever]
opt-level = 3
[profile.release.package.tendril]
opt-level = 3
[profile.release.package.slotmap]
opt-level = 3

# Server deploy profile: faster builds, still optimized
# Usage: cargo build --profile server-release --features server,vision
[profile.server-release]
inherits = "release"
opt-level = 2      # snabb kod, inte minsta binär
lto = "thin"       # ~3x snabbare än full LTO, 95% av vinsten
codegen-units = 4  # snabbare kompilering, minimal perf-kostnad
panic = "unwind"   # catch_unwind kräver unwind — abort dödar hela servern

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 2

[profile.dev]
opt-level = 0
debug = true
# Fler codegen-units → lägre peak-minnesanvändning vid länkning
# (default 256 i dev, men explicit för tydlighet)
codegen-units = 256

[patch.crates-io]
stylo = { path = "vendor/stylo-patched" }
